--- a/style.css
+++ b/style.css
@@ -163,3 +163,18 @@ textarea {
     border-bottom: 2px solid rgba(255, 255, 255, 0.6);
     padding-bottom: 14px;
 }
+
+.addTaskBtn button {
+    width: 100%;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.8;
+    margin-top: 12px;
+    border: 2px dashed rgba(255, 255, 255, 0.4);
+    color: white !important;
+    cursor: pointer;
+}
